// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`articlePageReducer handles the createComment action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the createCommentError action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {},
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the createCommentSuccess action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [
      Immutable.Map {},
    ],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the likeArticle action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the likeArticleError action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {},
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the likeArticleSuccess action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [
      undefined,
    ],
  },
}
`;

exports[`articlePageReducer handles the loadArticle action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "article": false,
}
`;

exports[`articlePageReducer handles the loadArticleError action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {},
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the loadArticleSuccess action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": Immutable.Map {},
}
`;

exports[`articlePageReducer handles the loadComments action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the loadCommentsError action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {},
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the loadCommentsSuccess action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the loadLikes action 1`] = `
Immutable.Map {
  "loading": true,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the loadLikesError action 1`] = `
Immutable.Map {
  "loading": false,
  "error": Immutable.Map {},
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer handles the loadLikesSuccess action 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": Immutable.Map {
    "title": "google",
    "uri": "https://google.com",
    "github": "",
    "description": "Search Engine",
    "image": "1548552844157-Screen Shot 2019-01-26 at 5.32.10 PM.png",
    "comments": Immutable.List [],
    "likes": Immutable.List [],
  },
}
`;

exports[`articlePageReducer returns the initial state 1`] = `
Immutable.Map {
  "loading": false,
  "error": false,
  "article": false,
}
`;
